--- a/configs/image_pusht_realtime_diffusion_policy_transformer.yaml
+++ b/configs/image_pusht_realtime_diffusion_policy_transformer.yaml
@@ -13,7 +13,7 @@ dataloader:
   persistent_workers: false
   pin_memory: true
   shuffle: true
-dataset_obs_steps: 2
+dataset_obs_steps: 1
 ema:
   _target_: diffusion_policy.model.diffusion.ema_model.EMAModel
   inv_gamma: 1.0
@@ -38,9 +38,9 @@ logging:
 multi_run:
   run_dir: data/outputs/2023.01.16/20.20.50_train_realtime_diffusion_transformer_hybrid_pusht_image
   wandb_name_base: 2023.01.16-20.20.50_train_realtime_diffusion_transformer_hybrid_pusht_image
-n_action_steps: 8
+n_action_steps: 1
 n_latency_steps: 0
-n_obs_steps: 2
+n_obs_steps: 1
 name: train_realtime_diffusion_transformer_hybrid
 obs_as_cond: true
 optimizer:
@@ -59,18 +59,18 @@ policy:
   - 84
   eval_fixed_crop: true
   horizon: ${horizon}
-  n_action_steps: 8
+  n_action_steps: ${n_action_steps}
   n_cond_layers: 0
   n_emb: 256
   n_head: 4
   n_layer: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusion_policy.model.diffusion.DDPMScheduler.DDPMScheduler
     beta_end: 0.02
     beta_schedule: linear
     beta_start: 0.0001
-    clip_sample: true
+    clip_sample: false
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
@@ -126,9 +126,9 @@ task:
     fps: 10
     legacy_test: true
     max_steps: 300
-    n_action_steps: 100
+    n_action_steps: ${n_action_steps}
     n_envs: null
-    n_obs_steps: 2
+    n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
