--- a/configs/image_pusht_realtime_diffusion_policy_transformer.yaml
+++ b/configs/image_pusht_realtime_diffusion_policy_transformer.yaml
@@ -13,7 +13,7 @@ dataloader:
   persistent_workers: false
   pin_memory: true
   shuffle: true
-dataset_obs_steps: 1
+dataset_obs_steps: 2
 ema:
   _target_: diffusion_policy.model.diffusion.ema_model.EMAModel
   inv_gamma: 1.0
@@ -22,26 +22,26 @@ ema:
   power: 0.75
   update_after_step: 0
 exp_name: default
-horizon: 100
+horizon: 20
 keypoint_visible_rate: 1.0
 logging:
   group: null
   id: null
   mode: online
-  name: 2023.01.16-20.20.50_train_realtime_diffusion_transformer_hybrid_pusht_image
-  project: diffusion_policy_debug
+  name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
+  project: diffusion_policy_pusht
   resume: true
   tags:
   - train_realtime_diffusion_transformer_hybrid
   - pusht_image
   - default
 multi_run:
-  run_dir: data/outputs/2023.01.16/20.20.50_train_realtime_diffusion_transformer_hybrid_pusht_image
-  wandb_name_base: 2023.01.16-20.20.50_train_realtime_diffusion_transformer_hybrid_pusht_image
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 1
 n_latency_steps: 0
-n_obs_steps: 1
-name: train_realtime_diffusion_transformer_hybrid
+n_obs_steps: ${dataset_obs_steps}
+name: realtime_diffusion_transformer_hybrid
 obs_as_cond: true
 optimizer:
   betas:
@@ -68,14 +68,14 @@ policy:
   noise_scheduler:
     _target_: diffusion_policy.model.diffusion.DDPMScheduler.DDPMScheduler
     beta_end: 0.02
-    beta_schedule: linear
+    beta_schedule: squaredcos_cap_v2
     beta_start: 0.0001
-    clip_sample: false
+    clip_sample: true
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
-    sequence_step: 1
-  num_inference_steps: 100
+    sequence_step: 5
+  num_inference_steps: 20
   obs_as_cond: true
   obs_encoder_group_norm: true
   p_drop_attn: 0.3
