--- a/configs/pusht/image_pusht_diffusion_policy_cnn.yaml
+++ b/configs/pusht/image_pusht_diffusion_policy_cnn.yaml
@@ -28,7 +28,7 @@ logging:
   group: null
   id: null
   mode: online
-  name: 2023.01.16-20.20.06_train_diffusion_unet_hybrid_pusht_image
+  name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
   project: diffusion_policy_pusht
   resume: true
   tags:
@@ -36,8 +36,8 @@ logging:
   - pusht_image
   - default
 multi_run:
-  run_dir: data/outputs/2023.01.16/20.20.06_train_diffusion_unet_hybrid_pusht_image
-  wandb_name_base: 2023.01.16-20.20.06_train_diffusion_unet_hybrid_pusht_image
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
 n_obs_steps: 2
