--- a/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
@@ -28,20 +28,20 @@ logging:
   group: null
   id: null
   mode: online
-  name: 2023.01.04-04.00.42_train_diffusion_transformer_hybrid_can_image
-  project: diffusion_policy_debug
+  name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
+  project: diffusion_policy_can_mh
   resume: true
   tags:
   - train_diffusion_transformer_hybrid
   - can_image
   - default
 multi_run:
-  run_dir: data/outputs/2023.01.04/04.00.42_train_diffusion_transformer_hybrid_can_image
-  wandb_name_base: 2023.01.04-04.00.42_train_diffusion_transformer_hybrid_can_image
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
 n_obs_steps: 2
-name: train_diffusion_transformer_hybrid
+name: diffusion_transformer_hybrid
 obs_as_cond: true
 optimizer:
   betas:
@@ -74,7 +74,7 @@ policy:
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
-  num_inference_steps: 100
+  num_inference_steps: 10
   obs_as_cond: true
   obs_encoder_group_norm: true
   p_drop_attn: 0.3
