--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
@@ -1,4 +1,4 @@
-_target_: diffusion_policy.workspace.train_diffusion_unet_hybrid_workspace.TrainDiffusionUnetHybridWorkspace
+_target_: diffusion_policy.workspace.train_realtime_diffusion_unet_hybrid_workspace.TrainRealtimeDiffusionUnetHybridWorkspace
 checkpoint:
   save_last_ckpt: true
   save_last_snapshot: false
@@ -38,10 +38,10 @@ logging:
 multi_run:
   run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
   wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-n_action_steps: 8
+n_action_steps: 1
 n_latency_steps: 0
 n_obs_steps: 2
-name: train_diffusion_unet_hybrid
+name: realtime_diffusion_unet_hybrid
 obs_as_global_cond: true
 optimizer:
   _target_: torch.optim.AdamW
@@ -53,7 +53,7 @@ optimizer:
   weight_decay: 1.0e-06
 past_action_visible: false
 policy:
-  _target_: diffusion_policy.policy.diffusion_unet_hybrid_image_policy.DiffusionUnetHybridImagePolicy
+  _target_: diffusion_policy.policy.realtime_diffusion_unet_hybrid_image_policy.RealtimeDiffusionUnetHybridImagePolicy
   cond_predict_scale: true
   crop_shape:
   - 76
@@ -64,21 +64,22 @@ policy:
   - 1024
   - 2048
   eval_fixed_crop: true
-  horizon: 16
+  horizon: ${horizon}
   kernel_size: 5
-  n_action_steps: 8
+  n_action_steps: ${n_action_steps}
   n_groups: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
-    _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
+    _target_: diffusion_policy.model.diffusion.DDPMScheduler.DDPMScheduler
     beta_end: 0.02
     beta_schedule: squaredcos_cap_v2
     beta_start: 0.0001
     clip_sample: true
-    num_train_timesteps: 100
+    num_train_timesteps: 112
     prediction_type: epsilon
     variance_type: fixed_small
-  num_inference_steps: 10
+    sequence_step: 7
+  num_inference_steps: 112
   obs_as_global_cond: true
   obs_encoder_group_norm: true
   shape_meta:
