--- a/configs/can_mh/image_can_mh_diffusion_policy_cnn.yaml
+++ b/configs/can_mh/image_can_mh_diffusion_policy_cnn.yaml
@@ -40,7 +40,7 @@ multi_run:
   wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
-n_obs_steps: 2
+n_obs_steps: ${dataset_obs_steps}
 name: train_diffusion_unet_hybrid
 obs_as_global_cond: true
 optimizer:
@@ -64,11 +64,11 @@ policy:
   - 1024
   - 2048
   eval_fixed_crop: true
-  horizon: 16
+  horizon: ${horizon}
   kernel_size: 5
-  n_action_steps: 8
+  n_action_steps: ${n_action_steps}
   n_groups: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
     beta_end: 0.02
@@ -139,8 +139,8 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
-    horizon: 16
-    n_obs_steps: 2
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
     pad_after: 7
     pad_before: 1
     rotation_rep: rotation_6d
@@ -182,7 +182,7 @@ task:
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
     fps: 10
     max_steps: 500
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: null
     n_obs_steps: 2
     n_test: 50
