--- a/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
@@ -40,7 +40,7 @@ multi_run:
   wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
-n_obs_steps: 2
+n_obs_steps: ${dataset_obs_steps}
 name: diffusion_transformer_hybrid
 obs_as_cond: true
 optimizer:
@@ -58,13 +58,13 @@ policy:
   - 76
   - 76
   eval_fixed_crop: true
-  horizon: 10
-  n_action_steps: 8
+  horizon: ${horizon}
+  n_action_steps: ${n_action_steps}
   n_cond_layers: 0
   n_emb: 256
   n_head: 4
   n_layer: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
     beta_end: 0.02
@@ -138,8 +138,8 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
-    horizon: 10
-    n_obs_steps: 2
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
     pad_after: 7
     pad_before: 1
     rotation_rep: rotation_6d
@@ -181,9 +181,9 @@ task:
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
     fps: 10
     max_steps: 500
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: 28
-    n_obs_steps: 2
+    n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
