--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
@@ -40,7 +40,7 @@ multi_run:
   wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 1
 n_latency_steps: 0
-n_obs_steps: 2
+n_obs_steps: ${dataset_obs_steps}
 name: realtime_diffusion_unet_hybrid
 obs_as_global_cond: true
 optimizer:
@@ -75,11 +75,11 @@ policy:
     beta_schedule: squaredcos_cap_v2
     beta_start: 0.0001
     clip_sample: true
-    num_train_timesteps: 112
+    num_train_timesteps: 128
     prediction_type: epsilon
     variance_type: fixed_small
-    sequence_step: 7
-  num_inference_steps: 112
+    sequence_step: 8
+  num_inference_steps: 16
   obs_as_global_cond: true
   obs_encoder_group_norm: true
   shape_meta:
@@ -140,8 +140,8 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
-    horizon: 16
-    n_obs_steps: 2
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
     pad_after: 7
     pad_before: 1
     rotation_rep: rotation_6d
@@ -183,9 +183,9 @@ task:
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
     fps: 10
     max_steps: 500
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: null
-    n_obs_steps: 2
+    n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
