--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
@@ -139,8 +139,8 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
-    horizon: 10
-    n_obs_steps: 2
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
     pad_after: 7
     pad_before: 1
     rotation_rep: rotation_6d
@@ -182,9 +182,9 @@ task:
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
     fps: 10
     max_steps: 500
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: 28
-    n_obs_steps: 2
+    n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
