refine config names

--- a/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_diffusion_policy_transformer.yaml
@@ -32,7 +32,7 @@ logging:
   project: diffusion_policy_can_mh
   resume: true
   tags:
-  - train_diffusion_transformer_hybrid
+  - ${name}
   - can_image
   - default
 multi_run:
