--- a/configs/pusht/image_pusht_realtime_diffusion_policy_cnn.yaml
+++ b/configs/pusht/image_pusht_realtime_diffusion_policy_cnn.yaml
@@ -32,7 +32,7 @@ logging:
   project: diffusion_policy_pusht
   resume: true
   tags:
-  - train_diffusion_unet_hybrid
+  - ${name}
   - pusht_image
   - default
 multi_run:
