--- a/configs/pusht/image_pusht_diffusion_policy_cnn.yaml
+++ b/configs/pusht/image_pusht_diffusion_policy_cnn.yaml
@@ -66,7 +66,7 @@ policy:
   eval_fixed_crop: true
   horizon: ${horizon}
   kernel_size: 5
-  n_action_steps: ${n_action_steps}
+  n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_groups: 8
   n_obs_steps: ${n_obs_steps}
   noise_scheduler:
@@ -116,8 +116,8 @@ task:
     _target_: diffusion_policy.dataset.pusht_image_dataset.PushTImageDataset
     horizon: ${horizon}
     max_train_episodes: 90
-    pad_after: 7
-    pad_before: 1
+    pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
+    pad_after: ${eval:'${n_action_steps}-1'}
     seed: 42
     val_ratio: 0.02
     zarr_path: data/pusht/pusht_cchi_v7_replay.zarr
