--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
@@ -59,7 +59,7 @@ policy:
   - 76
   eval_fixed_crop: true
   horizon: ${horizon}
-  n_action_steps: ${n_action_steps}
+  n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_cond_layers: 0
   n_emb: 256
   n_head: 4
@@ -141,8 +141,8 @@ task:
     dataset_path: data/robomimic/datasets/can/mh/image_abs.hdf5
     horizon: ${horizon}
     n_obs_steps: ${n_obs_steps}
-    pad_after: 7
-    pad_before: 1
+    pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
+    pad_after: ${eval:'${horizon}-1'}
     rotation_rep: rotation_6d
     seed: 42
     shape_meta:
