--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
@@ -22,7 +22,7 @@ ema:
   power: 0.75
   update_after_step: 0
 exp_name: default
-horizon: 10
+horizon: 100
 keypoint_visible_rate: 1.0
 logging:
   group: null
@@ -62,23 +62,23 @@ policy:
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_cond_layers: 0
   n_emb: 256
-  n_head: 4
-  n_layer: 8
+  n_head: 8
+  n_layer: 2
   n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusion_policy.model.diffusion.DDPMScheduler.DDPMScheduler
     beta_end: 0.02
-    beta_schedule: squaredcos_cap_v2
+    beta_schedule: linear
     beta_start: 0.0001
-    clip_sample: true
+    clip_sample: false
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
-    sequence_step: 10
-  num_inference_steps: 10
+    sequence_step: 1
+  num_inference_steps: 100
   obs_as_cond: true
   obs_encoder_group_norm: true
-  p_drop_attn: 0.3
+  p_drop_attn: 0.1
   p_drop_emb: 0.0
   shape_meta:
     action:
