Debug output action pos in seq In old code, the output action is the second in sequence because n_obs_step=2, which is not noise free

--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_cnn.yaml
@@ -13,7 +13,7 @@ dataloader:
   persistent_workers: false
   pin_memory: true
   shuffle: true
-dataset_obs_steps: 2
+dataset_obs_steps: 1
 ema:
   _target_: diffusion_policy.model.diffusion.ema_model.EMAModel
   inv_gamma: 1.0
@@ -64,7 +64,7 @@ policy:
   - 1024
   - 2048
   eval_fixed_crop: true
-  horizon: ${horizon}
+  horizon: ${eval:'${horizon} - ${n_obs_steps} + 1'}
   kernel_size: 5
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_groups: 8
