--- a/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
+++ b/configs/can_mh/image_can_mh_realtime_diffusion_policy_transformer.yaml
@@ -13,7 +13,7 @@ dataloader:
   persistent_workers: false
   pin_memory: true
   shuffle: true
-dataset_obs_steps: 2
+dataset_obs_steps: 1
 ema:
   _target_: diffusion_policy.model.diffusion.ema_model.EMAModel
   inv_gamma: 1.0
@@ -58,7 +58,7 @@ policy:
   - 76
   - 76
   eval_fixed_crop: true
-  horizon: ${horizon}
+  horizon: ${eval:'${horizon} - ${n_obs_steps} + 1'}
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_cond_layers: 0
   n_emb: 256
