--- a/configs/pusht/image_pusht_realtime_diffusion_policy_transformer.yaml
+++ b/configs/pusht/image_pusht_realtime_diffusion_policy_transformer.yaml
@@ -75,6 +75,7 @@ policy:
     prediction_type: epsilon
     variance_type: fixed_small
     sequence_step: 5
+  diffusion_warm_up: false
   num_inference_steps: 20
   obs_as_cond: true
   obs_encoder_group_norm: true
@@ -116,7 +117,7 @@ task:
     _target_: diffusion_policy.dataset.pusht_image_dataset.PushTImageDataset
     horizon: ${horizon}
     max_train_episodes: 90
-    pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
+    pad_before: ${eval:'${horizon}-1 if ${policy.diffusion_warm_up} else (${n_obs_steps}-1+${n_latency_steps})'}
     pad_after: ${eval:'${horizon}-1'}
     seed: 42
     val_ratio: 0.02
