--- a/diffusion_policy/config/task/can_image.yaml
+++ b/diffusion_policy/config/task/can_image.yaml
@@ -53,8 +53,8 @@ dataset:
   shape_meta: *shape_meta
   dataset_path: *dataset_path
   horizon: ${horizon}
-  pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
-  pad_after: ${eval:'${n_action_steps}-1'}
+  pad_before: ${eval:'${horizon}-1 if ${policy.diffusion_warm_up} else ${n_obs_steps}-1+${n_latency_steps}'}
+  pad_after: ${eval:'${horizon}-1 if "realtime" in "${name}" else ${n_action_steps}-1'}
   n_obs_steps: ${dataset_obs_steps}
   abs_action: *abs_action
   rotation_rep: 'rotation_6d'
