--- a/diffusion_policy/config/task/can_lowdim_abs.yaml
+++ b/diffusion_policy/config/task/can_lowdim_abs.yaml
@@ -36,8 +36,8 @@ dataset:
   _target_: diffusion_policy.dataset.robomimic_replay_lowdim_dataset.RobomimicReplayLowdimDataset
   dataset_path: *dataset_path
   horizon: ${horizon}
-  pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
-  pad_after: ${eval:'${n_action_steps}-1'}
+  pad_before: ${eval:'${horizon}-1 if ${policy.diffusion_warm_up} else ${n_obs_steps}-1+${n_latency_steps}'}
+  pad_after: ${eval:'${horizon}-1 if "realtime" in "${name}" else ${n_action_steps}-1'}
   obs_keys: *obs_keys
   abs_action: *abs_action
   use_legacy_normalizer: False
