--- a/diffusion_policy/config/train_diffusion_transformer_hybrid_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_transformer_hybrid_workspace.yaml
@@ -33,6 +33,7 @@ policy:
     clip_sample: True # required when predict_epsilon=False
     prediction_type: epsilon # or sample
 
+  diffusion_warm_up: false # useless argument, just to align with realtime config
   horizon: ${horizon}
   n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_obs_steps: ${n_obs_steps}
