--- a/configs/lift_ph/image_lift_ph_diffusion_policy_transformer.yaml
+++ b/configs/lift_ph/image_lift_ph_diffusion_policy_transformer.yaml
@@ -28,20 +28,20 @@ logging:
   group: null
   id: null
   mode: online
-  name: 2023.01.04-04.01.01_train_diffusion_transformer_hybrid_lift_image
-  project: diffusion_policy_debug
+  name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
+  project: diffusion_policy_lift_ph
   resume: true
   tags:
-  - train_diffusion_transformer_hybrid
+  - ${name}
   - lift_image
   - default
 multi_run:
-  run_dir: data/outputs/2023.01.04/04.01.01_train_diffusion_transformer_hybrid_lift_image
-  wandb_name_base: 2023.01.04-04.01.01_train_diffusion_transformer_hybrid_lift_image
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
-n_obs_steps: 2
-name: train_diffusion_transformer_hybrid
+n_obs_steps: ${dataset_obs_steps}
+name: diffusion_transformer_hybrid
 obs_as_cond: true
 optimizer:
   betas:
@@ -58,13 +58,13 @@ policy:
   - 76
   - 76
   eval_fixed_crop: true
-  horizon: 10
-  n_action_steps: 8
+  horizon: ${horizon}
+  n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_cond_layers: 0
   n_emb: 256
   n_head: 4
   n_layer: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
     beta_end: 0.02
@@ -74,7 +74,7 @@ policy:
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
-  num_inference_steps: 100
+  num_inference_steps: 10
   obs_as_cond: true
   obs_encoder_group_norm: true
   p_drop_attn: 0.3
@@ -138,10 +138,10 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/lift/ph/image_abs.hdf5
-    horizon: 10
-    n_obs_steps: 2
-    pad_after: 7
-    pad_before: 1
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
+    pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
+    pad_after: ${eval:'${n_action_steps}-1'}
     rotation_rep: rotation_6d
     seed: 42
     shape_meta:
@@ -181,9 +181,9 @@ task:
     dataset_path: data/robomimic/datasets/lift/ph/image_abs.hdf5
     fps: 10
     max_steps: 400
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: 28
-    n_obs_steps: 2
+    n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
