--- a/configs/tool_hang_ph/image_tool_hang_ph_diffusion_policy_cnn.yaml
+++ b/configs/tool_hang_ph/image_tool_hang_ph_diffusion_policy_cnn.yaml
@@ -28,20 +28,20 @@ logging:
   group: null
   id: null
   mode: online
-  name: 2023.01.03-19.43.26_train_diffusion_unet_hybrid_tool_hang_image_abs
-  project: diffusion_policy_debug
+  name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
+  project: diffusion_policy_tool_hang_ph
   resume: true
   tags:
-  - train_diffusion_unet_hybrid
+  - ${name}
   - tool_hang_image_abs
   - default
 multi_run:
-  run_dir: data/outputs/2023.01.03/19.43.26_train_diffusion_unet_hybrid_tool_hang_image_abs
-  wandb_name_base: 2023.01.03-19.43.26_train_diffusion_unet_hybrid_tool_hang_image_abs
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
 n_action_steps: 8
 n_latency_steps: 0
-n_obs_steps: 2
-name: train_diffusion_unet_hybrid
+n_obs_steps: ${dataset_obs_steps}
+name: diffusion_unet_hybrid
 obs_as_global_cond: true
 optimizer:
   _target_: torch.optim.AdamW
@@ -64,11 +64,11 @@ policy:
   - 1024
   - 2048
   eval_fixed_crop: true
-  horizon: 16
+  horizon: ${horizon}
   kernel_size: 5
-  n_action_steps: 8
+  n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_groups: 8
-  n_obs_steps: 2
+  n_obs_steps: ${n_obs_steps}
   noise_scheduler:
     _target_: diffusers.schedulers.scheduling_ddpm.DDPMScheduler
     beta_end: 0.02
@@ -78,7 +78,7 @@ policy:
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
-  num_inference_steps: 100
+  num_inference_steps: 10
   obs_as_global_cond: true
   obs_encoder_group_norm: true
   shape_meta:
@@ -139,10 +139,10 @@ task:
     _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
     abs_action: true
     dataset_path: data/robomimic/datasets/tool_hang/ph/image_abs.hdf5
-    horizon: 16
-    n_obs_steps: 2
-    pad_after: 7
-    pad_before: 1
+    horizon: ${horizon}
+    n_obs_steps: ${n_obs_steps}
+    pad_before: ${eval:'${n_obs_steps}-1+${n_latency_steps}'}
+    pad_after: ${eval:'${n_action_steps}-1'}
     rotation_rep: rotation_6d
     seed: 42
     shape_meta:
@@ -182,7 +182,7 @@ task:
     dataset_path: data/robomimic/datasets/tool_hang/ph/image_abs.hdf5
     fps: 10
     max_steps: 700
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: 28
     n_obs_steps: 2
     n_test: 50
