--- a/configs/image/can_ph/image_can_ph_diffusion_policy_transformer.yaml
+++ b/configs/image/can_ph/image_can_ph_diffusion_policy_transformer.yaml
@@ -29,7 +29,7 @@ logging:
   id: null
   mode: online
   name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-  project: diffusion_policy_can_ph
+  project: diffusion_policy_image_can_ph
   resume: true
   tags:
   - ${name}
