--- a/configs/image/pusht/image_pusht_diffusion_policy_transformer.yaml
+++ b/configs/image/pusht/image_pusht_diffusion_policy_transformer.yaml
@@ -29,7 +29,7 @@ logging:
   id: null
   mode: online
   name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-  project: diffusion_policy_pusht
+  project: diffusion_policy_image_pusht
   resume: true
   tags:
   - ${name}
