--- a/configs/image/can_ph/image_can_ph_realtime_diffusion_policy_transformer.yaml
+++ b/configs/image/can_ph/image_can_ph_realtime_diffusion_policy_transformer.yaml
@@ -59,7 +59,7 @@ policy:
   - 76
   eval_fixed_crop: true
   horizon: ${eval:'${horizon} - ${n_obs_steps} + 1'}
-  n_action_steps: 8
+  n_action_steps: ${eval:'${n_action_steps}+${n_latency_steps}'}
   n_cond_layers: 0
   n_emb: 256
   n_head: 4
@@ -68,9 +68,9 @@ policy:
   noise_scheduler:
     _target_: diffusion_policy.model.diffusion.DDPMScheduler.DDPMScheduler
     beta_end: 0.02
-    beta_schedule: squaredcos_cap_v2
+    beta_schedule: linear
     beta_start: 0.0001
-    clip_sample: true
+    clip_sample: false
     num_train_timesteps: 100
     prediction_type: epsilon
     variance_type: fixed_small
@@ -183,7 +183,7 @@ task:
     dataset_path: data/robomimic/datasets/can/ph/image_abs.hdf5
     fps: 10
     max_steps: 400
-    n_action_steps: 8
+    n_action_steps: ${n_action_steps}
     n_envs: 28
     n_obs_steps: ${n_obs_steps}
     n_test: 50
