--- a/configs/image/square_ph/image_square_ph_realtime_diffusion_policy_cnn.yaml
+++ b/configs/image/square_ph/image_square_ph_realtime_diffusion_policy_cnn.yaml
@@ -29,11 +29,11 @@ logging:
   id: null
   mode: online
   name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-  project: diffusion_policy_image_pusht
+  project: diffusion_policy_image_square_ph
   resume: true
   tags:
   - ${name}
-  - pusht_image
+  - square_image
   - default
 multi_run:
   run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
@@ -56,8 +56,8 @@ policy:
   _target_: diffusion_policy.policy.realtime_diffusion_unet_hybrid_image_policy.RealtimeDiffusionUnetHybridImagePolicy
   cond_predict_scale: true
   crop_shape:
-  - 84
-  - 84
+  - 76
+  - 76
   diffusion_step_embed_dim: 128
   down_dims:
   - 512
@@ -86,79 +86,171 @@ policy:
   shape_meta:
     action:
       shape:
-      - 2
+      - 10
     obs:
-      agent_pos:
-        shape:
-        - 2
-        type: low_dim
-      image:
+      agentview_image:
         shape:
         - 3
-        - 96
-        - 96
+        - 84
+        - 84
         type: rgb
+      robot0_eef_pos:
+        shape:
+        - 3
+      robot0_eef_quat:
+        shape:
+        - 4
+      robot0_eye_in_hand_image:
+        shape:
+        - 3
+        - 84
+        - 84
+        type: rgb
+      robot0_gripper_qpos:
+        shape:
+        - 2
 shape_meta:
   action:
     shape:
-    - 2
+    - 10
   obs:
-    agent_pos:
-      shape:
-      - 2
-      type: low_dim
-    image:
+    agentview_image:
       shape:
       - 3
-      - 96
-      - 96
+      - 84
+      - 84
       type: rgb
+    robot0_eef_pos:
+      shape:
+      - 3
+    robot0_eef_quat:
+      shape:
+      - 4
+    robot0_eye_in_hand_image:
+      shape:
+      - 3
+      - 84
+      - 84
+      type: rgb
+    robot0_gripper_qpos:
+      shape:
+      - 2
 task:
+  abs_action: true
   dataset:
-    _target_: diffusion_policy.dataset.pusht_image_dataset.PushTImageDataset
+    _target_: diffusion_policy.dataset.robomimic_replay_image_dataset.RobomimicReplayImageDataset
+    abs_action: true
+    dataset_path: data/robomimic/datasets/square/ph/image_abs.hdf5
     horizon: ${horizon}
-    max_train_episodes: 90
+    n_obs_steps: ${n_obs_steps}
     pad_before: ${eval:'${horizon}-1 if ${policy.diffusion_warm_up} else (${n_obs_steps}-1+${n_latency_steps})'}
     pad_after: ${eval:'${horizon}-1'}
+    rotation_rep: rotation_6d
     seed: 42
+    shape_meta:
+      action:
+        shape:
+        - 10
+      obs:
+        agentview_image:
+          shape:
+          - 3
+          - 84
+          - 84
+          type: rgb
+        robot0_eef_pos:
+          shape:
+          - 3
+        robot0_eef_quat:
+          shape:
+          - 4
+        robot0_eye_in_hand_image:
+          shape:
+          - 3
+          - 84
+          - 84
+          type: rgb
+        robot0_gripper_qpos:
+          shape:
+          - 2
+    use_cache: true
     val_ratio: 0.02
-    zarr_path: data/pusht/pusht_cchi_v7_replay.zarr
+  dataset_path: data/robomimic/datasets/square/ph/image_abs.hdf5
+  dataset_type: ph
   env_runner:
-    _target_: diffusion_policy.env_runner.pusht_image_runner.PushTImageRunner
+    _target_: diffusion_policy.env_runner.robomimic_image_runner.RobomimicImageRunner
+    abs_action: true
+    crf: 22
+    dataset_path: data/robomimic/datasets/square/ph/image_abs.hdf5
     fps: 10
-    legacy_test: true
-    max_steps: 300
+    max_steps: 400
     n_action_steps: ${n_action_steps}
-    n_envs: null
+    n_envs: 28
     n_obs_steps: ${n_obs_steps}
     n_test: 50
     n_test_vis: 4
     n_train: 6
     n_train_vis: 2
     past_action: false
+    render_obs_key: agentview_image
+    shape_meta:
+      action:
+        shape:
+        - 10
+      obs:
+        agentview_image:
+          shape:
+          - 3
+          - 84
+          - 84
+          type: rgb
+        robot0_eef_pos:
+          shape:
+          - 3
+        robot0_eef_quat:
+          shape:
+          - 4
+        robot0_eye_in_hand_image:
+          shape:
+          - 3
+          - 84
+          - 84
+          type: rgb
+        robot0_gripper_qpos:
+          shape:
+          - 2
     test_start_seed: 100000
-    train_start_seed: 0
-  image_shape:
-  - 3
-  - 96
-  - 96
-  name: pusht_image
+    tqdm_interval_sec: 1.0
+    train_start_idx: 0
+  name: square_image
   shape_meta:
     action:
       shape:
-      - 2
+      - 10
     obs:
-      agent_pos:
-        shape:
-        - 2
-        type: low_dim
-      image:
+      agentview_image:
         shape:
         - 3
-        - 96
-        - 96
+        - 84
+        - 84
         type: rgb
-task_name: pusht_image
+      robot0_eef_pos:
+        shape:
+        - 3
+      robot0_eef_quat:
+        shape:
+        - 4
+      robot0_eye_in_hand_image:
+        shape:
+        - 3
+        - 84
+        - 84
+        type: rgb
+      robot0_gripper_qpos:
+        shape:
+        - 2
+  task_name: square
+task_name: square_image
 training:
   checkpoint_every: 50
   debug: false
